# moderncpp

./: .gitignore  CMakeLists.txt  README.md  References.md
contrib/: CMakeLists.txt
contrib/boost-di/: CMakeLists.txt
contrib/boost-di/include/boost/: di.hpp
examples/: CMakeLists.txt  allocators.cxx  container_test.cxx  debugging_memory_resource.hxx  intializer_lists_are_broken.cxx  lambda_test.cxx  lambdas.cxx  polymorphics-di.cxx  raii_and_rule_of_035.cxx  smart_pointer_test.cxx  string_test.cxx  thread_safe_locale_initialization.cxx  threading.cxx
exercises/: CMakeLists.txt
exercises/game-of-life/: CMakeLists.txt  game_of_life.cxx  game_of_life.hxx  game_of_life_test.cxx  rules.md
exercises/linked-list/: CMakeLists.txt  list.hxx  list2_test.cxx  list_test.cxx
exercises/roman-numeral-converter/: CMakeLists.txt  roman_numeral_converter.cxx  roman_numeral_converter.hxx  roman_numeral_converter_test.cxx
